--- a/content/releases/02. akademik.md
+++ b/content/releases/02. akademik.md
@@ -12,7 +12,10 @@ links:
   - soundcloud: https://soundcloud.com/plgnsn/sets/akademik
 ---
 
-A mix of funk, hip hop, instrumental compositions, and lyrical songs. The album is about dreams of space and a better world.
+A chaotic and elegant fusion of funk, hip-hop, and rock, 
+accompanied by lyrical journeys through dreams, space, 
+and the promise of a better tomorrow.
+
 
 - Vocal: Anna Vorfolomeeva, Leo Bembiev, Sasha Raevsky
 - Music: Piluginasan 
