--- a/content/releases/01. kombo.md
+++ b/content/releases/01. kombo.md
@@ -9,7 +9,8 @@ links:
   - soundcloud: https://soundcloud.com/plgnsn/sets/piluginasan
 ---
 
-Live sound and hip hop
+Just three tracks embodying a raw, live blend 
+of reggae, rock, and hip-hop vibes.
 
 - Vocal: Leo Bembiev, Aleksandr Vyrazheikin, Sasha Raevsky, Sasha Patlukh
 - Music: Piluginasan 
