--- a/content/releases/03.pesnya.md
+++ b/content/releases/03.pesnya.md
@@ -8,6 +8,8 @@ cover: '/media/pesnya.png'
 links:
   - spotify: https://open.spotify.com/track/4woRFGh0qyr6Iy37q95h7L
   - yandex: https://music.yandex.ru/album/30472201/track/124303756
+  - bandcamp: https://piluginasan.bandcamp.com/track/--7
+  - soundcloud: https://on.soundcloud.com/qmAkTFw4QRVNNdNh7 
 ---
 
 A dub-infused track that claims  
